Fix route show alignment

--- a/app/assets/stylesheets/route_index/route_index_table.css
+++ b/app/assets/stylesheets/route_index/route_index_table.css
@@ -13,7 +13,7 @@
 */
 
 .route-index {
-    min-width: 935px;
+    width: 935px;
 }
 
 .route-index tr:nth-child(even){
