--- a/app/assets/stylesheets/route_show/show_route.css
+++ b/app/assets/stylesheets/route_show/show_route.css
@@ -3,14 +3,19 @@
         margin: 0px auto;
         display: flex;
         flex-direction: column;
-        align-items: left;
-        width: 1100px; 
+        align-items: center;
+        width: fit-content; 
 
         margin-top: 20px;
     }
 
+/* Align banner and buttons */
+    .show-route-container .banner, .route-actions{
+        align-self: flex-start;
+    }
+
 /* Banner */
-    .route-show .banner{
+    .show-route-container .banner{
         display: flex;
         justify-content: left;
         align-items: baseline;
